--- a/recette.css
+++ b/recette.css
@@ -10,9 +10,8 @@ body {
 
 div.contenu {
     background-color: white;
-    margin: 60px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 350px;
+    margin: 30px 8px 40px 8px;
+    padding: 0px 8px 10px 8px;
     box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.1);
     overflow: visible;
 }
@@ -82,9 +81,9 @@ table.info td {
 }
 
 table.info th {
-    font-size: 16px;
+    font-size: 14px;
     vertical-align: bottom;
-    padding-bottom: 8px;
+    padding-bottom: 4px;
 }
 
 img.info {
@@ -96,7 +95,7 @@ img.info {
 }
 
 div.colonne {
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -110,11 +109,6 @@ div.colonne h2 {
 
 div.colonne1 {
     display: inline-block;
-    margin-right: 10%
-}
-
-div.colonne2 {
-    float: right;
 }
 
 div.ingredients p {
@@ -155,5 +149,37 @@ table.preparation tr {
 }
 
 
+@media only screen and (min-width: 768px) {
+  div.contenu{
+        min-width: 350px;
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+  }
 
+  table.info th {
+        font-size: 16px;
+        vertical-align: bottom;
+        padding-bottom: 8px;
+    }
 
+    div.colonne {
+        width: 45%;
+    }
+
+    div.colonne1 {
+        margin-right: 10%
+    }
+
+    div.colonne2 {
+        float: right;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+
+    div.contenu{
+        margin-left: auto;
+        margin-right: auto;
+        width: 640px;
+    }
+}
